@@ -148,7 +148,7 @@ copy : sign
 	scp ChangeLog.txt mosquitto:site/mosquitto.org/
 
 coverage :
-	lcov --capture -d apps -d client -d lib -d plugins -d src --output-file coverage.info --no-external
+	lcov --capture -d apps -d client -d lib -d plugins -d src --output-file coverage.info --no-external --ignore-errors empty
 	genhtml coverage.info --output-directory out
 
 localdocker : reallyclean
