@@ -144,6 +144,8 @@ struct mosq_config {
 	bool no_tls;
 };
 
+extern const char hexseplist[32];
+
 int client_config_load(struct mosq_config *config, int pub_or_sub, int argc, char *argv[]);
 void client_config_cleanup(struct mosq_config *cfg);
 int client_opts_set(struct mosquitto *mosq, struct mosq_config *cfg);
