@@ -113,6 +113,9 @@ do_test('%10.10t', '02/sub/for\n')
 do_test('%20.10t', '          02/sub/for\n')
 do_test('%-20.10t', '02/sub/for          \n')
 do_test('%x', '6d657373616765\n')
+do_test('%.1x', '6 d 6 5 7 3 7 3 6 1 6 7 6 5\n')
+do_test('%.2x', '6d 65 73 73 61 67 65\n')
+do_test('%.2:x', '6d:65:73:73:61:67:65\n')
 do_test('%18x', '    6d657373616765\n')
 do_test('%-18x', '6d657373616765    \n')
 do_test('%X', '6D657373616765\n')
