@@ -181,6 +181,7 @@ Clients:
 - Fix parsing of IPv6 addresses in socks proxy urls.
 - Add `--tls-keylog` option which can be used to generate a file that can be
   used by wireshark to decrypt TLS traffic for debugging purposes.
+- mosquitto_sub payload hex output can now be split by fixed field length.
 
 Build:
 - Increased CMake minimal required version to 3.14, which is required for the
